align fix

--- a/style.css
+++ b/style.css
@@ -35,9 +35,8 @@ section {
 }
 
 #pastworks{
-    text-align: right;
-    margin-top: 100px;
-    padding-right: 50px;
+    text-align: left;
+    margin-top: 20px;
 }
 
 #contact{
